# libkrun

./: .cirrus.yml  .clang-format  .gitattributes  .gitignore  AGENTS.md  AUTHORS  CLAUDE_NOTES.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build_libkrun.sh  build_on_krunvm.sh  libkrun.pc.in  libkrun_init.pc  libkrun_init.pc.in
examples/chroot_vm/: Cargo.toml
examples/chroot_vm/src/: main.rs
examples/gtk_display/: Cargo.toml
examples/gtk_display/src/: display_backend.rs  display_loop.rs  event.rs  main.rs
examples/gtk_display/src/gtk_display/: display_backend.rs  display_worker.rs  mod.rs
examples/krun_gtk_display/: Cargo.toml
examples/krun_gtk_display/src/: display_backend.rs  display_worker.rs  input_backend.rs  input_constants.rs  lib.rs
examples/krun_gtk_display/src/scanout_paintable/: imp.rs  mod.rs
init/: Cargo.toml  Makefile  dhcp.c  dhcp.h  fs.c  fs.h  init  init.c  jsmn.h  parser.c  parser.h  timesync.c  timesync.h  utils.c  utils.h
init/aws-nitro/: archive.c  args_reader.c  fs.c  main.c  mod.c
init/aws-nitro/device/: app_stdio_output.c  net_tap_afvsock.c
init/aws-nitro/include/: archive.h  args_reader.h  fs.h  mod.h
init/init-binary/src/: env.rs  exec.rs  fs.rs  main.rs  timesync.rs
init/init-blob/: Cargo.toml  build.rs
init/init-blob-cdylib/: Cargo.toml
init/init-blob-cdylib/src/: gen.rs  lib.rs
init/init-blob-via-cdylib/: Cargo.toml  build.rs
init/init-blob-via-cdylib-weak/: Cargo.toml
init/init-blob-via-cdylib-weak/src/: lib.rs
init/init-blob-via-cdylib/src/: lib.rs
init/init-blob/src/: config.rs  init_schema.rs  lib.rs  oci_schema.rs
init/nitro/: archive.c  args_reader.c  cgroups_init.c  fs.c  fs_init.c  main.c  tap_afvsock.c  vsock.c
init/nitro/device/: app_stdio_output.c  device.c  net_tap_afvsock.c  signal.c
init/nitro/device/include/: device.h
init/nitro/include/: archive.h  args_reader.h  cgroups_init.h  fs.h  fs_init.h  tap_afvsock.h  vsock.h
init/src/: config.rs  dhcp.rs  env.rs  exec.rs  freebsd.rs  fs.rs  main.rs  timesync.rs
init/tee/: snp_attest.c  snp_attest.h
init/tee/kbs/: kbs.h  kbs_crypto.c  kbs_curl.c  kbs_types.c  kbs_util.c
krun-sys/: Cargo.toml  README.md  build.rs  wrapper.h
krun-sys/src/: lib.rs
src/arch/: Cargo.toml
src/arch/src/: lib.rs  shm.rs
src/arch/src/aarch64/: fdt.rs  layout.rs  mod.rs
src/arch/src/loongarch64/: layout.rs  mod.rs
src/arch/src/riscv64/: layout.rs  mod.rs
src/arch/src/x86_64/: gdt.rs  interrupts.rs  layout.rs  mod.rs  mptable.rs  msr.rs  regs.rs
src/aws_nitro/: Cargo.toml
src/aws_nitro/src/: error.rs  lib.rs
src/aws_nitro/src/enclave/: args_writer.rs  mod.rs
src/cpuid/: Cargo.toml
src/cpuid/src/: bit_helper.rs  brand_string.rs  common.rs  cpu_leaf.rs  lib.rs
src/cpuid/src/template/: c3.rs  t2.rs
src/cpuid/src/transformer/: amd.rs  common.rs  intel.rs  mod.rs
src/devices/: Cargo.toml  build.rs
src/devices/src/: bus.rs  fdt.rs  lib.rs
src/devices/src/display/: display_backend.rs  edid.rs  mod.rs  noop.rs  types.rs
src/devices/src/fdt/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs
src/devices/src/legacy/: aia.rs  gic.rs  gicv3.rs  hvfgicv3.rs  i8042.rs  ioapic.rs  ioapic_kvm.rs  ioapic_whp.rs  irqchip.rs  kvmaia.rs  kvmapi.rs  kvmgicv2.rs  kvmgicv3.rs  kvmioapic.rs  kvmloongarchirqchip.rs  mod.rs  rtc_pl031.rs  serial.rs  vcpu.rs
src/devices/src/virtio/: bindings.rs  chain_storage.rs  descriptor_utils.rs  device.rs  file_traits.rs  iovec_utils.rs  linux_errno.rs  mmio.rs  mod.rs  queue.rs  queue_tests.rs  rx_queue_producer.rs  test_utils.rs  tx_queue_consumer.rs
src/hvf/: Cargo.toml
src/hvf/src/: bindings.rs  lib.rs
src/init_blob/: Cargo.toml
src/init_blob/src/: lib.rs
src/kbs-types/: Cargo.toml  README.md
src/kbs-types/src/: lib.rs
src/kbs-types/src/tee/: mod.rs  sev.rs
src/kbs-types/testdata/: sev_challenge.json  sev_request.json
src/kernel/: Cargo.toml
src/kernel/src/cmdline/: mod.rs
src/kernel/src/loader/: mod.rs
src/krun_display/: Cargo.toml  build.rs  libkrun_display.h
src/krun_display/src/: c_to_rust.rs  lib.rs  rust_to_c.rs
src/krun_input/: Cargo.toml  build.rs  libkrun_input.h
src/krun_input/src/: c_to_rust.rs  lib.rs  rust_to_c.rs
src/libkrun/: Cargo.toml  build.rs
src/libkrun-cdylib/: Cargo.toml
src/libkrun-cdylib/src/: gen_header.rs  gen_rust_client.rs  lib.rs
src/libkrun/src/: api_tests.rs  lib.rs
src/libkrun/src/api/: devices.rs  error.rs  logging.rs  mod.rs  payload.rs  vmm_builder.rs
src/logger/: Cargo.toml
src/logger/src/: lib.rs  logger.rs
src/nitro/: Cargo.toml
src/nitro/src/: args_writer.rs  enclaves.rs  error.rs  lib.rs  output.rs
src/nitro/src/device/: mod.rs
src/nitro/src/enclave/: args_writer.rs  mod.rs
src/nitro/src/net/: error.rs  mod.rs  proxy.rs
src/polly/: Cargo.toml
src/polly/src/: event_manager.rs  lib.rs
src/rutabaga_gfx/: Cargo.toml  build.rs
src/rutabaga_gfx/ffi/: Cargo.toml  LICENSE  Makefile  build.rs
src/rutabaga_gfx/ffi/src/: .clang-format  lib.rs
src/rutabaga_gfx/src/: gfxstream.rs  gfxstream_stub.rs  lib.rs  macros.rs  renderer_utils.rs  rutabaga_2d.rs  rutabaga_core.rs  rutabaga_snapshot.rs  rutabaga_utils.rs  virgl_renderer.rs
src/rutabaga_gfx/src/cross_domain/: cross_domain_protocol.rs  mod.rs
src/rutabaga_gfx/src/rutabaga_gralloc/: formats.rs  gralloc.rs  minigbm.rs  minigbm_bindings.rs  mod.rs  rendernode.rs  system_gralloc.rs  vulkano_gralloc.rs
src/rutabaga_gfx/src/rutabaga_os/: descriptor.rs  memory_mapping.rs  mod.rs  shm.rs
src/utils/: Cargo.toml
src/utils/src/: arg_parser.rs  byte_order.rs  fd.rs  lib.rs  pollable_channel.rs  signal.rs  sized_vec.rs  time.rs  worker_message.rs
src/utils/src/linux/: epoll.rs  eventfd.rs  (+1 more)
src/vm-memory/: Cargo.toml
src/vm-memory/src/: address.rs  atomic.rs  bytes.rs  endian.rs  guest_memory.rs  lib.rs  mmap.rs  mmap_unix.rs  mmap_windows.rs  volatile_memory.rs
src/vmm/: Cargo.toml  build.rs
src/vmm/src/: builder.rs  lib.rs  resources.rs  signal_handler.rs  snapshot.rs  terminal.rs  vstate.rs  worker.rs
src/whp/: Cargo.toml
src/whp/src/: lib.rs
(+386 files in other folders)
