[package]
name = "krun-sys"
version = "1.11.1"
edition = "2024"
rust-version = "1.85.0"
description = "Rust bindings for libkrun"
repository = "https://github.com/containers/libkrun"
license = "Apache-2.0"
links = "krun"

[workspace]

[build-dependencies]
bindgen = { version = "0.72.1", default-features = false }
pkg-config = { version = "0.3", default-features = false }

[features]
default = []
bindgen_clang_runtime = ["bindgen/runtime"]
