[package]
name = "chroot_vm"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:krun"]
cdylib = ["dep:krun-cdylib"]

[dependencies]
krun = { package = "libkrun", path = "../../src/libkrun", optional = true }
krun-cdylib = { package = "libkrun-via-cdylib", path = "../../src/libkrun-via-cdylib", optional = true }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
