[package]
name = "chroot_vm"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:krun"]
cdylib = ["dep:krun-cdylib"]

[dependencies]
krun = { package = "libkrun", path = "../../src/libkrun", optional = true }
krun-cdylib = { package = "libkrun-via-cdylib", path = "../../src/libkrun-via-cdylib", optional = true }
init-blob = { package = "krun-init-blob", version = "=0.1.0-1.18.0", path = "../../init/init-blob" }
anyhow = "1"
env_logger = "0.11"
libc = ">=0.2.39"
log = "0.4"
