[package]
name = "gtk_display"
version = "0.1.0"
edition = "2024"

[features]
efi = []

[dependencies]
crossbeam-channel = "0.5.15"
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_16"] }
krun_display = { path = "../../src/krun_display" }
utils = { path = "../../src/utils" }
krun-sys = "1.10.1"
anyhow = "1.0.98"
clap = "4.5.39"
clap_derive = "4.5.32"
log = "0.4.27"
libc = "0.2.172"
env_logger = "0.9.3"

#[dev-dependencies]
# HACK: we don't depened on this directly. But this makes feature unification of the resolver, use the "runtime" feature
# of clang-sys, which fixes the error message:
# "a `libclang` shared library is not loaded on this thread"
#bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
