[package]
name = "gtk_display"
description = "Reference implementation of a display backend for libkrun"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../../src/utils" } # Our version of rust vmm-sys-util
crossbeam-channel = "0.5.15"
gtk = { version = "0.10", package = "gtk4", features = ["v4_16"] }
krun_display = { path = "../../src/krun_display" }
anyhow = "1.0.98"
log = "0.4.27"
libc = "0.2.174"
