[package]
name = "gtk_display"
description = "Reference implementation of a display backend for libkrun"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../../src/utils", package = "krun-utils" } # Our version of rust vmm-sys-util
gtk = { version = "0.10", package = "gtk4", features = ["v4_16"] }
krun_display = { path = "../../src/krun_display", package = "krun-display" }
krun_input = { path = "../../src/krun_input", package = "krun-input" }
anyhow = "1.0.98"
log = "0.4.27"
libc = "0.2.174"
crossbeam-channel = "0.5.15"
