[package]
name = "krun-init-blob-via-cdylib"
version = "0.1.0-1.18.1"
edition = "2021"
description = "Strong Rust client for libkrun-init (links libkrun_init.so)"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"
build = "build.rs"

[dependencies]
ffier = { git = "file:///home/mhrica/Dev2/ffier/ffier.git", rev = "be3aadd" }
