[package]
name = "init-blob"
version = "0.1.0-1.18.1"
edition = "2021"
description = "Default init binary blob for libkrun guests"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"
build = "build.rs"

[features]
amd-sev = []
tdx = []
timesync = []

[dependencies]
ffier = { git = "file:///home/mhrica/Dev2/ffier/ffier.git", rev = "9e36967" }
ffier-builtins = { git = "file:///home/mhrica/Dev2/ffier/ffier.git", rev = "9e36967" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lib]
path = "src/lib.rs"
