[package]
name = "krun-aws-nitro"
version = "0.1.0-1.17.3"
edition = "2021"
description = "AWS Nitro Enclaves support for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[features]
aws-nitro = []

[dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["poll"] }
tar = "0.4"
vsock = "0.5"

devices = { package = "krun-devices", version = "=0.1.0-1.17.3", path = "../devices" }
log = "0.4"
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
nitro-enclaves = "0.6.0"
