[package]
name = "krun-cpuid"
version = "0.1.0-1.17.3"
authors = ["The libkrun Authors"]
edition = "2021"
description = "CPUID handling for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[features]
tdx = []

[dependencies]
vmm-sys-util = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }
kvm-ioctls = "0.22"
