[package]
name = "krun-devices"
version = "0.1.0-1.18.0"
authors = ["The libkrun Authors"]
edition = "2021"
build = "build.rs"
description = "Virtual device emulation for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[features]
tee = []
amd-sev = ["blk", "tee"]
tdx = ["blk", "tee"]
net = []
blk = []
gpu = ["rutabaga_gfx", "thiserror", "zerocopy", "krun_display"]
snd = ["pw", "thiserror"]
input = ["zerocopy", "krun_input"]
virgl_resource_map2 = []
aws-nitro = []
test_utils = []
vhost-user = ["vhost", "vmm-sys-util"]

[dependencies]
bitflags = "1.2.0"
crossbeam-channel = ">=0.5.15"
libc = ">=0.2.39"
libloading = "0.8"
log = "0.4.0"
nix = { version = "0.30.1", features = ["ioctl", "net", "poll", "socket", "fs"] }
pw = { package = "pipewire", version = "0.9.2", optional = true }
rand = "0.9.2"
thiserror = { version = "2.0", optional = true }
vhost = { version = "0.15", optional = true, features = ["vhost-user-frontend"] }
vmm-sys-util = { version = "0.15", optional = true }
virtio-bindings = "0.2.0"
vm-memory = { version = "0.17", features = ["backend-mmap"] }
zerocopy = { version = "0.8.26", optional = true, features = ["derive"] }
krun_display = { package = "krun-display", version = "0.1.0", path = "../display", optional = true, features = ["bindgen_clang_runtime"] }
krun_input = { package = "krun-input", version = "0.1.0", path = "../input", features = ["bindgen_clang_runtime"], optional = true }

arch = { package = "krun-arch", version = "=0.1.0-1.18.0", path = "../arch" }
utils = { package = "krun-utils", version = "=0.1.0-1.18.0", path = "../utils" }
polly = { package = "krun-polly", version = "=0.1.0-1.18.0", path = "../polly" }
rutabaga_gfx = { package = "krun-rutabaga-gfx", version = "=0.1.0-1.18.0", path = "../rutabaga_gfx", features = ["virgl_renderer", "virgl_renderer_next"], optional = true }
imago = { version = "0.2.2", features = ["sync-wrappers", "vm-memory"] }

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { package = "krun-hvf", version = "=0.1.0-1.18.0", path = "../hvf" }
lru = ">=0.9"

[target.'cfg(target_os = "linux")'.dependencies]
rutabaga_gfx = { package = "krun-rutabaga-gfx", version = "=0.1.0-1.18.0", path = "../rutabaga_gfx", features = ["x"], optional = true }
caps = "0.5.5"
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }
kvm-ioctls = "0.22"

[target.'cfg(any(target_arch = "aarch64", target_arch = "riscv64"))'.dependencies]
vm-fdt = ">= 0.2.0"
