[package]
name = "krun-hvf"
version = "0.1.0-1.18.0"
authors = ["The libkrun Authors"]
edition = "2021"
description = "Apple Hypervisor.framework backend for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[dependencies]
crossbeam-channel = ">=0.5.15"
libloading = "0.8"
log = "0.4.0"

arch = { package = "krun-arch", version = "=0.1.0-1.18.0", path = "../arch" }
