[package]
name = "kbs-types"
description = "Rust (de)serializable types for KBS"
version = "0.0.0"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
homepage = "https://github.com/virtee/kbs-types"
license = "Apache-2.0"

[features]
tee-sev = [ "sev" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sev = { git = "https://github.com/tylerfanelli/sev.git", branch = "launch_trait_cleanups", features = ["openssl"],  optional = true }
