[package]
name = "krun-kernel"
version = "0.1.0-1.18.0"
edition = "2021"
description = "Kernel loading support for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[dependencies]
vm-memory = { version = "0.17", features = ["backend-mmap"] }

utils = { package = "krun-utils", version = "=0.1.0-1.18.0", path = "../utils" }
