[package]
name = "krun_display"
description = "Rust bindings for implemeting display backends in Rust for libkrun"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
log = "0.4.27"
bitflags = "2.9.1"

[features]
bindgen_clang_runtime = ["bindgen/runtime"]

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false }
#clang-sys = { version = "=1.6.1", features = ["runtime"] }