[package]
name = "krun_input"
description = "Rust bindings for implementing input backends in Rust for libkrun"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
libc = "0.2"
log = "0.4.27"
bitflags = "2.9.1"
static_assertions = "1.1.0"

[build-dependencies]
bindgen = { version = "0.72", default-features = false }

[features]
bindgen_clang_runtime = ["bindgen/runtime"]
