[package]
name = "libkrun-cdylib"
version = "2.0.0"
edition = "2021"

[lib]
name = "krun"
crate-type = ["cdylib"]

[[bin]]
name = "gen-libkrun-header"
path = "src/gen_header.rs"

[[bin]]
name = "gen-libkrun-rust-client"
path = "src/gen_rust_client.rs"

[dependencies]
krun = { package = "libkrun", path = "../libkrun" }
ffier = { git = "https://github.com/mtjhrc/ffier.git", rev = "be3aadd" }
ffier-bridge = { git = "https://github.com/mtjhrc/ffier.git", rev = "be3aadd" }
ffier-bridge-macros = { git = "https://github.com/mtjhrc/ffier.git", rev = "be3aadd" }
ffier-gen-c-header = { git = "https://github.com/mtjhrc/ffier.git", rev = "be3aadd" }
ffier-gen-rust-client = { git = "https://github.com/mtjhrc/ffier.git", rev = "be3aadd" }
ffier-schema = { git = "https://github.com/mtjhrc/ffier.git", rev = "be3aadd" }
serde_json = "1"
libc = ">=0.2.39"
log = "0.4"
