[package]
name = "libkrun"
version = "1.14.0"
authors = ["The libkrun Authors"]
edition = "2021"
build = "build.rs"

[features]
tee = []
cca = [ "tee" ]
amd-sev = [ "blk", "tee" ]
net = []
blk = []
efi = [ "blk", "net" ]
gpu = []
snd = []
virgl_resource_map2 = []
nitro = [ "dep:nitro", "dep:nitro-enclaves" ]

[dependencies]
crossbeam-channel = ">=0.5.15"
env_logger = "0.11"
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
libc = ">=0.2.39"
libloading = "0.8"
log = "0.4.0"
once_cell = "1.4.1"

kvm-bindings = { version = ">=0.8", features = ["fam-wrappers"] , git = "https://github.com/virtee/kvm-bindings", branch = "add_bindings_for_realms" }

devices = { path = "../devices" }
polly = { path = "../polly" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] , git = "https://github.com/virtee/kvm-bindings", branch = "add_bindings_for_realms" }
kvm-ioctls = { version = ">=0.21", git = "https://github.com/virtee/kvm-ioctls", branch = "cca" }
nitro = { path = "../nitro", optional = true }
nitro-enclaves = { version = "0.3.0", optional = true }
vm-memory = ">=0.13"

[lib]
name = "krun"
crate-type = ["cdylib"]
