[package]
name = "libkrun"
version = "1.15.0"
authors = ["The libkrun Authors"]
edition = "2021"
build = "build.rs"

[features]
tee = []
amd-sev = [ "blk", "tee" ]
tdx = [ "blk", "tee" ]
net = []
blk = []
efi = [ "blk", "net" ]
gpu = ["krun_display"]
snd = []
virgl_resource_map2 = []
nitro = [ "dep:nitro", "dep:nitro-enclaves" ]

[dependencies]
crossbeam-channel = ">=0.5.15"
env_logger = "0.11"
libc = ">=0.2.39"
libloading = "0.8"
log = "0.4.0"
once_cell = "1.4.1"
krun_display = { path = "../krun_display", optional = true, features = ["bindgen_clang_runtime"] }

devices = { path = "../devices" }
polly = { path = "../polly" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }
rand = "0.9.2"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.21"
nitro = { path = "../nitro", optional = true }
nitro-enclaves = { version = "0.3.0", optional = true }
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }

[lib]
name = "krun"
crate-type = ["cdylib"]
