[package]
name = "libkrun"
version = "1.18.0"
authors = ["The libkrun Authors"]
edition = "2021"
description = "A dynamic library providing Virtualization-based process isolation capabilities"
build = "build.rs"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[features]
tee = ["vmm/tee", "devices/tee"]
amd-sev = ["blk", "tee", "vmm/amd-sev", "devices/amd-sev"]
tdx = ["blk", "tee", "vmm/tdx", "devices/tdx"]
net = ["devices/net", "vmm/net"]
blk = ["devices/blk", "vmm/blk"]
gpu = ["vmm/gpu", "devices/gpu", "krun_display"]
snd = ["vmm/snd", "devices/snd"]
input = ["krun_input", "vmm/input", "devices/input"]
virgl_resource_map2 = ["devices/virgl_resource_map2"]
aws-nitro = ["vmm/aws-nitro", "devices/aws-nitro", "dep:aws-nitro", "dep:nitro-enclaves"]
vhost-user = ["vmm/vhost-user", "devices/vhost-user"]

[dependencies]
crossbeam-channel = ">=0.5.15"
env_logger = "0.11"
libc = ">=0.2.39"
libloading = "0.8"
log = "0.4.0"
once_cell = "1.4.1"
krun_display = { package = "krun-display", version = "0.1.0", path = "../display", optional = true, features = ["bindgen_clang_runtime"] }
krun_input = { package = "krun-input", version = "0.1.0", path = "../input", optional = true, features = ["bindgen_clang_runtime"] }

devices = { package = "krun-devices", version = "=0.1.0-1.18.0", path = "../devices" }
polly = { package = "krun-polly", version = "=0.1.0-1.18.0", path = "../polly" }
utils = { package = "krun-utils", version = "=0.1.0-1.18.0", path = "../utils" }
vmm = { package = "krun-vmm", version = "=0.1.0-1.18.0", path = "../vmm" }
rand = "0.9.2"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { package = "krun-hvf", version = "=0.1.0-1.18.0", path = "../hvf" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }
kvm-ioctls = "0.22"
aws-nitro = { package = "krun-aws-nitro", version = "=0.1.0-1.18.0", path = "../aws_nitro", optional = true }
nitro-enclaves = { version = "0.5.0", optional = true }
vm-memory = { version = "0.17", features = ["backend-mmap"] }

[lib]
name = "krun"
crate-type = ["cdylib", "lib"]
