[package]
name = "nitro"
version = "0.1.0"
edition = "2021"

[features]
nitro = []

[dependencies]
libc = "0.2.171"
nix = { version = "0.30.1", features = ["ioctl", "poll"] }
tar = "0.4.44"
vsock = "0.5.1"

devices = { path = "../devices" }
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nitro-enclaves = "0.5.0"
