[package]
name = "krun-polly"
version = "0.1.0-1.18.0"
authors = ["The libkrun Authors"]
edition = "2021"
description = "Event-driven I/O polling for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[dependencies]
utils = { package = "krun-utils", version = "=0.1.0-1.18.0", path="../utils" }

[target.'cfg(unix)'.dependencies]
libc = ">=0.2.39"