[package]
name = "utils"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"

[dependencies]
bitflags = "1.2.0"
libc = ">=0.2.85"
log = "0.4.0"
nix = "0.30.1"
vmm-sys-util = ">= 0.14"
crossbeam-channel = ">=0.5.15"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] }
