[package]
name = "krun-utils"
version = "0.1.0-1.18.0"
authors = ["The libkrun Authors"]
edition = "2021"
description = "Utility helpers for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[dependencies]
bitflags = "1.2.0"
libc = ">=0.2.85"
log = "0.4.0"
nix = "0.30.1"
vmm-sys-util = "0.14"
crossbeam-channel = ">=0.5.15"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.30.1", features = ["fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
] }
