[package]
name = "vm-memory"
version = "0.2.0"
description = "Safe abstractions for accessing the VM physical memory"
keywords = ["memory"]
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vm-memory"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[features]
default = []
integer-atomics = []
backend-mmap = []
backend-atomic = ["arc-swap"]

[dependencies]
libc = ">=0.2.39"
arc-swap = { version = ">=0.4.5", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = ">=0.3"
features = ["errhandlingapi"]

[dev-dependencies]
matches = ">=0"
vmm-sys-util = ">= 0.4.0"
